--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=''
-NEO4J_URI="neo4j://localhost:7687"
+NEO4J_URI=''
 NEO4J_USERNAME='neo4j'
 NEO4J_PASSWORD=''
-
+TOKENIZERS_PARALLELISM=true
 
